# tibberator

./: .gitignore  Cargo.toml  LICENSE  README.md  run_aider.bat
.github/workflows/: rust.yml
src/: html_logger.rs  lib.rs  main.rs
src/lib_tests/: mod.rs
src/tibber/: data_handling.rs  data_types.rs  output.rs  tui.rs
src/tibber/data_handling_tests/: mod.rs
src/tibber/output_tests/: mod.rs
tests/: graphql-client-test-subscription.graphql  lib-tests.rs  mock_tibber_provider.rs  test-config.toml
tests/mock_subscription/: mod.rs
tibber/: consumption_hourly.graphql  consumption_hourly_page_info.graphql  consumption_page_info.graphql  fee_estimation.graphql  livemeasurement.graphql  price_current.graphql  price_hourly.graphql  tibber.json  view.graphql
