[package]
name = "tibberator"
version = "0.1.0"
edition = "2021"
authors = ["Stephan Zoellinger"]
description = "A small tool to connect to the Tibber API and read current power data."
license = "MIT"
repository = "https://github.com/babelfischchen/tibberator"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = {version = "0.25.0", features = ["async-native-tls", "async-std-runtime"]}
chrono = "0.4"
clap-v3 = "3.0.0-beta.1"
crossterm = {version = "0.27.0"}
confy = "^0.6"
ctrlc = "3.4"
exitcode = "1.1.2"
futures = {version = "0.3.30"}
graphql_client = {version = "0.13.0", features = ["reqwest"]}
graphql-ws-client = {version = "0.8.0-rc.2", features = ["client-graphql-client", "async-tungstenite"]}
http = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.113"
rand = "0.8"
reqwest = {version = "^0.11", features = ["json", "blocking"]}
tokio = { version = "1", features = ["full"] }
